Added missing multiline character

--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -69,10 +69,10 @@ jobs:
         shell: pwsh
         working-directory: ./src
         run: |
-          dotnet build
-            --configuration ${{ env.BUILD_CONFIGURATION }}
-            --runtime ${{ matrix.runtime }}
-            --no-restore
+          dotnet build `
+            --configuration ${{ env.BUILD_CONFIGURATION }} `
+            --runtime ${{ matrix.runtime }} `
+            --no-restore `
             /p:Version=${{ needs.semver.outputs.semVer }}
 
       - name: Publish CLI
